--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=47"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "confmgr"
+name = "confmg"
 version = "1.0.0"
 description = "A simple config manager."
 readme = "README.md"
@@ -21,11 +21,11 @@ dependencies = [
 ]
 
 [project.urls]
-"Homepage" = "https://github.com/pablo-ng/confmgr"
-"Bug Tracker" = "https://github.com/pablo-ng/confmgr/issues"
+"Homepage" = "https://github.com/pablo-ng/confmg"
+"Bug Tracker" = "https://github.com/pablo-ng/confmg/issues"
 
 [project.scripts]
-confmgr = "confmgr.__main__:main"
+confmg = "confmg.__main__:main"
 
 [tool.bumpver]
 current_version = "1.0.0"
@@ -37,4 +37,4 @@ push = true
 
 [tool.bumpver.file_patterns]
 "pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
-"confmgr/__main__.py" = ["{version}"]
+"confmg/__main__.py" = ["{version}"]
