--- a/.github/workflows/gh_release.yml
+++ b/.github/workflows/gh_release.yml
@@ -15,8 +15,7 @@ jobs:
       run: cargo build --release
     - name: Release
       uses: fnkr/github-action-ghr@v1
-      # if: startsWith(github.ref, 'refs/tags/')
+      if: startsWith(github.ref, 'refs/tags/')
       env:
-        # GHR_COMPRESS: xz
         GHR_PATH: target/release/confmg
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
