--- a/.github/workflows/gh_release.yml
+++ b/.github/workflows/gh_release.yml
@@ -18,4 +18,4 @@ jobs:
       if: startsWith(github.ref, 'refs/tags/')
       env:
         GHR_PATH: target/release/confmg
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
