--- a/.github/workflows/gh_release.yml
+++ b/.github/workflows/gh_release.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build
-      run: cargo build --release
+      run: cargo build --release --target x86_64-unknown-linux-musl
     - name: Release
       uses: fnkr/github-action-ghr@v1
       if: startsWith(github.ref, 'refs/tags/')
