--- a/.github/workflows/gh_release.yml
+++ b/.github/workflows/gh_release.yml
@@ -10,6 +10,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+    - uses: actions-rs/toolchain@v1
+      with:
+        profile: minimal
+        toolchain: stable
+        override: true
+        target: x86_64-unknown-linux-musl
     - name: Build
       run: cargo build --release --target x86_64-unknown-linux-musl
     - name: Release
