--- a/.github/workflows/gh_release.yml
+++ b/.github/workflows/gh_release.yml
@@ -22,5 +22,5 @@ jobs:
       uses: fnkr/github-action-ghr@v1
       if: startsWith(github.ref, 'refs/tags/')
       env:
-        GHR_PATH: target/release/confmg
+        GHR_PATH: target/x86_64-unknown-linux-musl/release/confmg
         GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
