--- a/.github/workflows/gh_release.yml
+++ b/.github/workflows/gh_release.yml
@@ -24,3 +24,21 @@ jobs:
       env:
         GHR_PATH: target/x86_64-unknown-linux-musl/release/confmg
         GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+  windows:
+    runs-on: windows-latest
+    steps:
+    - uses: actions/checkout@v3
+    - uses: actions-rs/toolchain@v1
+      with:
+        profile: minimal
+        toolchain: stable
+        override: true
+        target: x86_64-pc-windows-msvc
+    - name: Build
+      run: cargo build --release --target x86_64-pc-windows-msvc
+    - name: Release
+      uses: fnkr/github-action-ghr@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      env:
+        GHR_PATH: target/x86_64-pc-windows-msvc/release/confmg.exe
+        GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
