--- a/.github/workflows/gh_release.yml
+++ b/.github/workflows/gh_release.yml
@@ -6,7 +6,7 @@ on:
 env:
   CARGO_TERM_COLOR: always
 jobs:
-  linux:
+  build-linux:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -17,14 +17,15 @@ jobs:
         override: true
         target: x86_64-unknown-linux-musl
     - name: Build
-      run: cargo build --release --target x86_64-unknown-linux-musl
-    - name: Release
-      uses: fnkr/github-action-ghr@v1
-      if: startsWith(github.ref, 'refs/tags/')
-      env:
-        GHR_PATH: target/x86_64-unknown-linux-musl/release/confmg
-        GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
-  windows:
+      run: |
+        mkdir artifacts
+        cargo build --release --target x86_64-unknown-linux-musl
+        mv target/x86_64-unknown-linux-musl/release/confmg artifacts/confmg_x86_64_linux
+    - uses: actions/upload-artifact@v3
+      with:
+        name: linux
+        path: artifacts
+  build-windows:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v3
@@ -35,10 +36,23 @@ jobs:
         override: true
         target: x86_64-pc-windows-msvc
     - name: Build
-      run: cargo build --release --target x86_64-pc-windows-msvc
-    - name: Release
-      uses: fnkr/github-action-ghr@v1
-      if: startsWith(github.ref, 'refs/tags/')
-      env:
-        GHR_PATH: target/x86_64-pc-windows-msvc/release/confmg.exe
-        GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+      run: |
+        mkdir artifacts
+        cargo build --release --target x86_64-pc-windows-msvc
+        mv target/x86_64-pc-windows-msvc/release/confmg.exe artifacts/confmg_x86_64_windows.exe
+    - uses: actions/upload-artifact@v3
+      with:
+        name: windows
+        path: artifacts
+  upload-ghr:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/download-artifact@v3
+    - name: Display structure of downloaded files
+      run: ls -R
+    # - name: Release
+    #   uses: fnkr/github-action-ghr@v1
+    #   if: startsWith(github.ref, 'refs/tags/')
+    #   env:
+    #     GHR_PATH: target/x86_64-unknown-linux-musl/release/confmg
+    #     GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
