--- a/.github/workflows/gh_release.yml
+++ b/.github/workflows/gh_release.yml
@@ -46,6 +46,7 @@ jobs:
         path: artifacts
   upload-ghr:
     runs-on: ubuntu-latest
+    needs: [build-linux, build-windows]
     steps:
     - uses: actions/download-artifact@v3
     - name: Display structure of downloaded files
