--- a/.github/workflows/gh_release.yml
+++ b/.github/workflows/gh_release.yml
@@ -49,11 +49,9 @@ jobs:
     needs: [build-linux, build-windows]
     steps:
     - uses: actions/download-artifact@v3
-    - name: Display structure of downloaded files
-      run: ls -R
-    # - name: Release
-    #   uses: fnkr/github-action-ghr@v1
-    #   if: startsWith(github.ref, 'refs/tags/')
-    #   env:
-    #     GHR_PATH: target/x86_64-unknown-linux-musl/release/confmg
-    #     GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+    - name: Release
+      uses: fnkr/github-action-ghr@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      env:
+        GHR_PATH: .
+        GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
